--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,4 @@
+{sub_dirs, ["rel"]}.
 {deps, [
   {cowboy, ".*", {git, "git://github.com/extend/cowboy.git",     "master"}},
   {jsx,    ".*", {git, "git://github.com/talentdeficit/jsx.git", "master"}}
