added copyright, plus some NIF stuff

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,9 @@
 {sub_dirs, ["rel"]}.
+
 {deps, [
   {cowboy, ".*", {git, "git://github.com/extend/cowboy.git",     "master"}},
   {jsx,    ".*", {git, "git://github.com/talentdeficit/jsx.git", "master"}}
 ]}.
+
+{port_specs, [{"priv/complex6_nif.so",["c_src/test.c"]}]}.
+
